# TreeComparison

./: CMakeLists.txt  CMakePresets.json  README.md
Applications/: CMakeLists.txt
Applications/TreeComparisonDemo/: CMakeLists.txt  Main.c
Libraries/: CMakeLists.txt
Libraries/TreeLibrary/: AvlTree.c  AvlTree.h  CMakeLists.txt  Common.h  SplayTree.c  SplayTree.h
Scripts/: PlotScript.ipynb
Tests/UnitTest/: AvlTreeTest.cpp  CMakeLists.txt  SplayTree.cpp
